<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/callButton1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/homepage_button_styles"
            android:contentDescription="@string/make_sound_button_description"
            android:src="@drawable/baseline_notifications_none_24"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/callButton7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/callButton3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/callButton4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/homepage_button_styles"
            android:contentDescription="@string/torch_button_description"
            android:drawableTop="@drawable/homepage_button_styles"
            android:src="@drawable/baseline_brightness_7_24"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/callButton6"
            app:layout_constraintTop_toBottomOf="@+id/callButton7"
            app:layout_constraintVertical_bias="0.014" />

        <ImageButton
            android:id="@+id/callButton7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="39dp"
            android:background="@drawable/homepage_button_styles"
            android:contentDescription="@string/location_button_description"
            android:src="@drawable/baseline_location_on_24"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/callButton5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.494" />

        <ImageButton
            android:id="@+id/callButton3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/homepage_button_styles"
            android:contentDescription="@string/call_button_description"
            android:src="@drawable/baseline_call_24"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/callButton5"
            app:layout_constraintEnd_toStartOf="@+id/callButton1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/callButton5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/homepage_button_styles"
            android:contentDescription="@string/sen_message_button_description"
            android:src="@drawable/outline_message_24"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/callButton7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/callButton6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="132dp"
            android:background="@drawable/homepage_button_styles"
            android:contentDescription="@string/call_police_button_description"
            android:src="@drawable/baseline_security_24"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/callButton4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/callButton5"
            app:layout_constraintVertical_bias="0.014" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="126dp"
            android:layout_height="130dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toTopOf="@+id/callButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>